k8s/deployment.yaml
apiVersion: apps/v1                       
kind: Deployment                          
metadata:                                 
  namespace: gabriel                      
  name: goserver               
  labels:                                 
    app: goserver              
spec:                                     
  replicas: 2  
  revisionHistoryLimit: 1                        
  selector:                               
    matchLabels:                          
      app: goserver                  
  template:                               
    metadata:                 
      labels:                 
        app: goserver  
    spec:                       
      containers:             
        - name: goserver      
          image: "gabrielrodriguesdev/hello-go:latest"
          resources:                                                        #Definindo recursos do container.
              requests:                                                     #Definindo o mínimo de recursos minimo que o container precisa para funcionar (se não tiver esse minimo ele nem vai executar) -> Por fim o Kubernetes sobe esse pod no node que tiver esses recursos minimos disponiveis, caso não tenha o pod ficará pendente. 
                cpu: "0.01"                                                 #CPU minimo para o container funcionar -> A medida usada é VCPU, cada vCPU possui 1000 milicores então a medida é feito em milicores. Se uma aplicação usar 500m está usando metade de uma vCPU 1000m
                memory: 20Mi                                                #Memoria minima para o container -> Memória é só fazendo teste de carga para saber o minimo
              limits:                                                       #Definindo o máximo de recursos que meu container pode ter.
                cpu: "0.01"                                                 #Definindo o máximo de CPU que o container pode usar.
                memory: 25Mi                                                #Definindo o máximo de memória que o container pode usar.
          # resources:
          #   limits:
          #     memory: 512Mi
          #     cpu: "1"
          #   requests:
          #     memory: 256Mi
          #     cpu: "0.2"
          startupProbe:                                                     
            httpGet:                                                        
              path: /healthz                                                 
              port: 8000                                                    
            periodSeconds: 3                                                
            failureThreshold: 30                                            
          readinessProbe:                                                   
            httpGet:                                                        
              path: /healthz                                                 
              port: 8000                                                    
            periodSeconds: 1                                                
            failureThreshold: 1                                             
          livenessProbe:                                                    
            httpGet:                                                        
              path: /healthz                                                 
              port: 8000                                                    
            periodSeconds: 5                                                
            timeoutSeconds: 1
            failureThreshold: 1                                             
            successThreshold: 1
          # envFrom:                                                  
          #   - secretRef:                                            
          #       name: goserver-secret                               
---
apiVersion: v1
kind: Service
metadata:
  namespace: gabriel
  name: goserver-service
spec:
  selector: 
    app: goserver
  type: ClusterIP
  ports:
    - name: goserver-service
      port: 80
      targetPort: 8000
      protocol: TCP
