k8s/gabriel.yaml
apiVersion: apps/v1                       
kind: Deployment                          
metadata:                                 
  namespace: finansist                      
  name: finansist-adm              
  labels:                                 
    app: finansist-adm              
spec:                                     
  replicas: 3     
  selector:                               
    matchLabels:                          
      app: finansist-adm                   
  template:                               
    metadata:                 
      labels:                 
        app: finansist-adm
    spec:                     
      containers:             
        - name: finansist-adm      
          image: "gabrielrodriguesdev/finansist:1.0.1"
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  namespace: finansist
  name: finansist-service
spec:
  selector: 
    app: finansist-adm
  type: ClusterIP 
  ports:
    - name: finansist-service 
      port: 80
      targetPort: 80
      protocol: TCP
